# miniflux-summarizer

./: .gitignore  AGENTS.md  README.md  flake.nix  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/plans/: 2026-04-18-digest-newsletter-design.md  2026-04-18-digest-newsletter-impl.md  2026-04-19-config-extensions-design.md  2026-04-19-config-extensions.md  2026-06-13-cicd-lint-typecheck-design.md  2026-06-13-cicd-lint-typecheck.md
src/miniflux_summarizer/: cli.py  client.py  config.py  digest.py  filter.py  llm.py
tests/: test_cli.py  test_client.py  test_config.py  test_digest.py  test_filter.py  test_integration.py  test_llm.py
