[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "miniflux-summarizer"
version = "0.1.0"
description = "Generate LLM-powered digests and newsletters from Miniflux RSS entries"
requires-python = ">=3.12"
dependencies = [
    "miniflux>=2.1.0",
    "httpx>=0.27.0",
    "openai>=1.30.0",
    "markdownify>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30.0",
]

[project.scripts]
miniflux-summarizer = "miniflux_summarizer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
