[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "miniflux-summarizer"
version = "0.1.0"
description = "Generate LLM-powered digests and newsletters from Miniflux RSS entries"
requires-python = ">=3.12"
dependencies = [
    "markdown>=3.5",
    "markdownify>=0.12.0",
    "miniflux",
    "httpx>=0.27.0",
    "openai>=1.30.0",
]



[project.scripts]
miniflux-summarizer = "miniflux_summarizer.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff",
    "mypy",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
per-file-ignores = {"tests/test_cli.py" = ["E501"], "tests/test_digest.py" = ["E501"]}

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]
